force-app/main/default/objects/Market_Event__c/Market_Event__c.object-meta.xml
<CustomObject>
    <label>Market Event</label>
    <pluralLabel>Market Events</pluralLabel>
    <nameField>
        <displayFormat>MEVT-{0000}</displayFormat>
        <label>Market Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>