force-app/main/default/objects/Market_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RBI_MPC</fullName>
                <label>RBI MPC</label>
            </value>
            <value>
                <fullName>IT_SELLOFF</fullName>
                <label>IT Sell-off</label>
            </value>
            <value>
                <fullName>EARNINGS_BEAT</fullName>
                <label>Earnings Beat</label>
            </value>
            <value>
                <fullName>EARNINGS_MISS</fullName>
                <label>Earnings Miss</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>