force-app/main/default/objects/Market_Event__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <type>Text</type>
    <length>255</length>
</CustomField>