force-app/main/default/objects/Market_Event__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <type>Text</type>
    <length>20</length>
</CustomField>