force-app/main/default/objects/Market_Event__c/fields/Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time__c</fullName>
    <label>Trigger Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>